# server/src/routes/book.routes.js
@@ -1,8 +1,9 @@
 const router = require('express').Router();
-const { createBook, getAllBooks } = require('../controllers/book_controller');
+const { createBook, getAllBooksFiltered, updateBook } = require('../controllers/book_controller');
 const { authenticateJWT, authorizeRole } = require('../middleware/auth_middleware');
 
 router.post('/', authenticateJWT, authorizeRole('ADMIN'), createBook);
-router.get('/', authenticateJWT, getAllBooks);
+router.put('/:id', authenticateJWT, authorizeRole('ADMIN'), updateBook);
+router.get('/', authenticateJWT, getAllBooksFiltered);
 
 module.exports = router;
